GNOME Bugzilla – Bug 786402
Combo types list doesn't close on esc
Last modified: 2017-08-17 13:57:36 UTC
Using nautilus 3.24.2.1 - click on the search icon - click on the down arrow from the combo - open the "what" combo list - hit "esc" on the keyboard the combo list should close but it doesn't
The problem is that the focus is not in the popover.
(In reply to Carlos Soriano from comment #1) > The problem is that the focus is not in the popover. Judging from the description, the problem is rather that the revealer does not hide the child when ESC is pressed, not that the popover doesn’t go away. If the focus was on the popover, the popover itself would go away, no?
(In reply to Ernestas Kulik from comment #2) > (In reply to Carlos Soriano from comment #1) > > The problem is that the focus is not in the popover. > > Judging from the description, the problem is rather that the revealer does > not hide the child when ESC is pressed, not that the popover doesn’t go away. > > If the focus was on the popover, the popover itself would go away, no? Well, it’s not just a revealer, but you get it.
Ah! I see. But one starting problem is that the focus is not there, so it's not keyboard navigable at all, and that's more serious and could be the root problem.
Created attachment 357783 [details] [review] search-popover: make type list box keyboard-navigable Currently, the type list box in the search popover is not keyboard-navigable, which, as a consequence, results in the user’s inability to also easily close the popover.
With the patch, the whole popover goes away on ESC being pressed, is that good enough, Sebastien?
Review of attachment 357783 [details] [review]: Excellent, thanks!
Attachment 357783 [details] pushed as 6e2379e - search-popover: make type list box keyboard-navigable