search-popover: make type list box keyboard-navigable

Currently, the type list box in the search popover is not
keyboard-navigable, which, as a consequence, results in the user’s
inability to also easily close the popover.

https://bugzilla.gnome.org/show_bug.cgi?id=786402